[tool.poetry]
name = "accounting-app"
version = "0.1.0"
description = ""
authors = ["George Jones <george@circleaudiovisual.com>"]
readme = "README.md"
packages = [{include = "accounting_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
psycopg2 = "^2.9.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
